DIしてdocの更新
